# EasyFormatter

./: .gitignore  CLAUDE.md  CODEME.md  README.md  build_app.bat  build_exe.bat  build_release.bat  clean.bat  clean_project.bat  main.py  package-lock.json  package.json  sync-version.js  test_core.py
.claude/skills/: audit-large-files.md  check-spelling.md
.trae/documents/: EasyFormatter 项目重构与扩充计划.md  Refactor UI to Three-Section Layout (Global Toolbar + Tabbed Sidebar) (1).md  Refactor UI to Three-Section Layout (Global Toolbar + Tabbed Sidebar).md  UI 布局修正与重构计划.md  Upgrade EasyFormatter to V1.1 (Presets, Feedback, Memory).md  (+1 more)
config/: settings.json
core/: pipeline.py  rules.py
scripts/: debug-start.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appdirs.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/formatter/: mod.rs  pipeline.rs  rules.rs
src-tauri/src/core/json_tools/: mod.rs
src-tauri/src/core/presets/: mod.rs
src-tauri/src/history/: commands.rs  commands_convert.rs  commands_crud.rs  commands_gc.rs  commands_health.rs  commands_helpers.rs  commands_materialize.rs  commands_noise.rs  db.rs  mod.rs  models.rs  phase2_tests.rs  repo.rs  repo_core.rs  repo_gc.rs  repo_noise.rs  repo_types.rs  repo_versions.rs
src-tauri/tests/: phase2_tests.rs
tests/: test_core_pipeline.py  test_services_text.py
ui/: WindowAndLayoutSpec.md  index.html  main_window.py  package-lock.json  package.json  styles.qss  vite.config.ts
(+113 files in other folders)
