[package]
name = "easyformatter"
version = "1.1.0"
description = "EasyFormatter Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "easyformatter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
lazy_static = "1.4"
