[package]
name = "easyformatter"
version = "1.2.0"
description = "EasyFormatter Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "easyformatter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
lazy_static = "1.4"
tauri-plugin-clipboard-manager = "2.3.2"
directories = "6.0.0"
md5 = "0.8.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.42"
json-patch = "4.1.0"
zstd = "0.13.3"
